Bug 952819 - Disallow starting pre barrier verification when post barrier verifier is already running r=terrence