js/src/jit-test/tests/gc/bug-952819.js
@@ -1,0 +1,3 @@
+verifypostbarriers()
+verifyprebarriers()
+verifypostbarriers()
